--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,19 @@
 :root {
-  --primary-color: #fce138;
-  --secondary-color: #024e76;
-  --tertiary-color: #39a6b2;
+--primary-color: #fce138;
+--secondary-color: #024e76;
+--tertiary-color: #39a6b2;
 }
 * {
 margin: 0;
 padding: 0;
 box-sizing: border-box;
 } 
-body 
-{
-/* more on this crazy alphanumerical value in a minute! */
+
+body{
 color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
 }
+
 /* apply styles to <header> */
 
 /*Header Start*/
@@ -47,15 +47,15 @@ text-decoration: none;
 color: #fce138;
 }
 header nav {
-  margin: 7px 0;
+margin: 7px 0;
 }
 header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-  }
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+align-items: center;
+list-style: none;
+}
 header nav ul li a {
 padding: 10px 15px;
 font-weight: lighter;
@@ -72,261 +72,259 @@ text-shadow: none;
 
 /*Footer Start*/
 footer {
-  background: #fce138;
-  width: 100%
-  padding  40px 35px; 
-  justify-content: space-between;
-  flex-wrap: wrap;
-  }
+background: #fce138;
+width: 100%
+padding  40px 35px; 
+justify-content: space-between;
+flex-wrap: wrap;
+}
+
+footer h2 {
+color: #024e76;
+font-size: 30px;
+margin: 0;
+}
   
-  footer h2 {
-  color: #024e76;
-  font-size: 30px;
-  margin: 0;
-  }
-  
-  footer div {
-  
-  line-height:1.5;
-  text-align: right;        
-  }
-  footer a {
-  color: #024e76;
-  }
+footer div {
+line-height:1.5;
+text-align: right;        
+}
+footer a {
+color: #024e76;
+}
 /*Footer End*/
 
 /*Style Section*/
 section {
-  padding: 60px;
+padding: 60px;
 }
 
 /*Hero Style Start */
 .hero {
-  background-image: url("..//hero-bg.jpg");
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  background-attachment: fixed;
-  background-position: 80%;
-  }
-  .hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5%;
-    color:#fff;
-    font-size: 18px;
-    line-height: 1.2;
-  }
-  .hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
+background-image: url("..//hero-bg.jpg");
+background-size: cover;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
+align-items: flex-start;
+background-attachment: fixed;
+background-position: 80%;
+}
+.hero-cta {
+width: 35%;
+text-align: right;
+margin: 3.5%;
+color:#fff;
+font-size: 18px;
+line-height: 1.2;
+}
+.hero-cta h2 {
+font-style: italic;
+font-size: 55px;
+color: #fce138;
+text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
   
-  .hero-form {
-  background-color:  rgba( 252,225,56,0.8);
-  padding: 20px;
-  color: #024e76;
-  border: solid 3px #024e76;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  border-radius: 15px;
-  width: 40%;
-  margin: 3.5%;
-  }
-  .hero-form button:hover {
-    background-color: #39a6b2;  
-  }
-  .hero-form h3 {
-  font-size: 24px;
-  margin: 0;
-  }
-  .hero-form p {
-  margin: 5px 0 15px 0;
-  }
-  .form-input {
-  border: 1px solid #024e76;
-  display: block;
-  padding: 7px 15px;
-  font-size: 16px;
-  color: #024e76;
-  width: 100%;
-  margin-bottom: 15px;
-  border-radius: 10px;
-  background-color: rgba(255,255,255, 0.75);;
-  }
-  .form-input:focus {
-   background-color: rgba(255,255,255, 1);
-  outline: none;
-  }
-  .hero-form label {
-  margin: 0 5px;
-  }
-  .hero-form button {
-  color: #fce138;
-  background-color: #024e76;
-  border:none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 10px;
-  }
- 
-  /*Header Stop*/
+.hero-form {
+background-color:  rgba( 252,225,56,0.8);
+padding: 20px;
+color: #024e76;
+border: solid 3px #024e76;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+border-radius: 15px;
+width: 40%;
+margin: 3.5%;
+}
+.hero-form button:hover {
+background-color: #39a6b2;  
+}
+.hero-form h3 {
+font-size: 24px;
+margin: 0;
+}
+.hero-form p {
+margin: 5px 0 15px 0;
+}
+.form-input {
+border: 1px solid #024e76;
+display: block;
+padding: 7px 15px;
+font-size: 16px;
+color: #024e76;
+width: 100%;
+margin-bottom: 15px;
+border-radius: 10px;
+background-color: rgba(255,255,255, 0.75);;
+}
+.form-input:focus {
+background-color: rgba(255,255,255, 1);
+outline: none;
+}
+.hero-form label {
+margin: 0 5px;
+}
+.hero-form button {
+color: #fce138;
+background-color: #024e76;
+border:none;
+padding: 10px 20px;
+font-size: 16px;
+border-radius: 10px;
+}
+/*Header Stop*/
 
 /*Section Title Starts*/
-
-  .section-title {
-    font-size: 48px;
-    color: #024e76;
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-    }  
-    .primary-border {
-      border-color: #fce138;
-      }
+.section-title {
+font-size: 48px;
+color: #024e76;
+border-bottom: 3px solid;
+padding-bottom: 20px;
+text-align: center;
+margin: 0 auto 35px auto;
+width: 50%;
+}  
+.primary-border {
+border-color: #fce138;
+}
          
-      .secondary-border {
-      border-color: #39a6b2;
-      }
+.secondary-border {
+border-color: #39a6b2;
+}
+  
 /*Section Title Stops*/
 
 /*What We Do Start*/
-.intro p {line-height: 1.7;
-  color: #39a6b2;
-  width: 80%;
-  margin: 0 auto;
-  font-size: 20px;
-  text-align: center;
+.intro p {
+line-height: 1.7;
+color: #39a6b2;
+width: 80%;
+margin: 0 auto;
+font-size: 20px;
+text-align: center;
 }
 /*What We Do End*/
 
 /*What You Do Styles Start*/
 
 .steps { 
-  background: #fce138;
+background: var(--primary-color)
 }
 
-.steps {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    border-bottom: 1px solid #39a6b2;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-  }
+.step {
+margin: 50px auto;
+padding-bottom: 50px;
+width: 80%;
+border-bottom: 1px solid #39a6b2;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: space-between;
+}
   
-  .steps :last-child {
-    border-bottom: none;
-  }
+.step:not(:last-child) {
+border-bottom: none;
+}
   
-  .steps h3 {
-    color: #024e76;
-    font-size: 46px;
-    flex: 1 30%;
-  }
+.step h3 {
+color: #024e76;
+font-size: 46px;
+flex: 1 30%;
+}
   
-  .steps-intro {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
+.step-info {
+flex: 2 70%;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+}
   
-  .step-img {
-    flex: 1 12%;
-    margin-right: 20px;
-  }
-  
-  .steps-img img {
-    max-width: 100%;
-  }
-  
-  .steps-text {
-    flex: 12;
-  }
-  
-  .steps-text p {
-    color: #39a6b2;
-    font-size: 18px;
-  }
-  
-  .steps-text h4 {
-    font-size: 26px;
-    line-height: 1.5;
-    color: #024e76;
-  }
+.step-img {
+flex: 1 12%;
+margin-right: 20px;
+}
+  .step-img img {
+max-width: 100%;
+}
+  .step-text {
+flex: 12;
+}
+
+.step-text p {
+color: #39a6b2;
+font-size: 18px;
+}
+
+.step-text h4 {
+font-size: 26px;
+line-height: 1.5;
+color: #024e76;
+}
 /*What You Do Style Stops*/
 
 /*Meet The Trainers Start*/
 .trainers {
-  width: 100%;
-  margin: 0% auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+width: 100%;
+margin: 0% auto;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
 }
 
 .trainer {
-  margin: 20px;
-  background: #024e76;
-  color: #fce138;
-  flex: 1
-  }
-  
-  .trainer img {
-  width: 100%
-  }
-  
-  .trainer-bio {
-  padding: 25px;
-  line-height: 1.3;
-  }
-  .trainer-bio h3 {
-  font-size: 28px;
-  }
-  .trainer-bio h4 {
-  font-weight: lighter;
-  font-size: 22px;
-  margin-bottom: 15px;
-  }
-  .trainer-bio p {
-  font-size: 17px;
-  }
-  */Meet The Trainers End*/
+margin: 20px;
+background: #024e76;
+color: #fce138;
+flex: 1
+}
+.trainer img {
+width: 100%
+}
+ 
+.trainer-bio {
+padding: 25px;
+line-height: 1.3;
+}
+.trainer-bio h3 {
+font-size: 28px;
+}
+.trainer-bio h4 {
+font-weight: lighter;
+font-size: 22px;
+margin-bottom: 15px;
+}
+.trainer-bio p {
+font-size: 17px;
+}
+*/Meet The Trainers End*/
+/*REACH OUT STYLES START*/
 
-
-/* REACH OUT STYLES START */
 .contact {
 background: #024e76;
 }
+#reach-out {
+  background: #024e76;
+}
 .contact h2 {
-  color: #fce138;
-  }
+color: #fce138;
+}
 .contact-info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
 }
 .contact-info > * {
-    flex: 1;
-    margin: 15px;
+flex: 1;
+margin: 15px;
 }
 .contact-info iframe {
- height: 400px;
+height: 400px;
 }   
 
 .contact-info div {
 color: white;
 }
 
-.contact-info h3 {
+.contact-intro h3 {
 color: #fce138;
 font-size: 32px;
 }
@@ -338,240 +336,248 @@ font-style: normal;
 }
 
 .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    border-radius: 10px; 
-    background-color:  rgba(255,255,255, 0.75);
-    }
+border: 1px solid #024e76;
+display: block;
+padding: 7px 15px;
+font-size: 16px;
+color: #024e76;
+width: 100%;
+margin-bottom: 15px;
+margin-top: 5px;
+border-radius: 10px; 
+background-color: rgba(255,255,255, 0.75);
+}
 
-    .contact-form input:focus, .contact-form textarea:focus {
-        background-color: rgba (255, 255, 244, 1);
-        outline: none;
-    }
-
- .contact-form button {
-    width: 100%;
-    border: none;
-    background: #fce138;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
-    border-radius: 10px;
+.contact-form input:focus, .contact-form textarea:focus {
+background-color: rgba (255, 255, 244, 1);
+outline: none;
+}
+.contact-form button {
+ width: 100%;
+border: none;
+background: #fce138;
+text-align: center;
+padding: 15px 0;
+font-size: 16px;
+border-radius: 10px;
+color: var(--secondary-color);
 }
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
-  }
-  contact-info a {
-    color: #fce138;
-    }
-    .contact-info{
-      background-color: #024e76;
-    }
-/* REACH OUT STYLES END */
+color: #fce138;
+background: #39a6b2;
+}
+.contact-info a {
+color: #fce138;
+}
+/*REACH OUT STYLES END*/
 
 /*Utilities*/
 .text-left {
-  text-align: left;
+text-align: left;
 }
 .text-right{
-  text-align: right;
-  
-}
+text-align: right;
+  }
 
 .flex-row {
-    display: flex;
+display: flex;
 }
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-        position: relative;
-      }
-    
-      header h1 {
-        width: 100%;
-        text-align: center;
-      }
-    
-      header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-      }
-    
-      header nav ul li a {
-        font-size: 20px;
-      }
-    
-      footer h2, footer div {
-        text-align: center;
-        width: 100%;
-      }
-      .hero-cta, .hero-form {
-        width: 100%;
-      }
-      .hero-cta {
-        text-align: center;
-      }
-      .section-title {
-        width: 80%;
-      }
-      
-      .trainer {
-        flex: 0 70%;
-      }
-      
-      .contact-info iframe{
-        flex: 1 100%;
-      }
-      .some-class {
-        text-shadow: 5px 10px 15px black;
-        box-shadow: 5px 10px 15px rgba(0,0,0,25);
-      }
-      @media screen and (max-width: 768px) {
-        section {
-          padding: 30px 15px;
-        }
-        .step h3 {
-            flex: 1 100%;
-            text-align: center;
-          }
-        
-          .step-info {
-            flex: 2 100%;
-            text-align: center;
-            justify-content: center;
-          }
-        
-          .step-img {
-            flex: 0 32%;
-            margin-right: 0;
-            margin-top: 15px;
-            margin-bottom: 15px;
-          }
-        
-          .step-text {
-            flex: 100%;  
-          }
-        
-        }
-    }
-    @media screen and (max-width: 575px) {
 
-        .hero-form button {
-          width: 100%;
-        }
-      
-        .section-title {
-          width: 95%;
-        }
-      
-        .intro p {
-          width: 100%;
-        }
-      
-        .trainer {
-          flex: 0 100%;
-        }
-      
-        .contact-info {
-          text-align: center;
-        }
-      
-        .contact-info > * {
-          flex: 0 100%;
-        }
-      }
-      .contact-form {
-        order: 3;
-      }
-      checkbox-wrapper input, .radio-wrapper input {
-        opacity: 0;
-      }
-      .checkbox-wrapper label, .radio-wrapper label {
-        position: relative;
-        left: 10px;
-        margin: 10px;
-        line-height: 1.6;
-      }
-      .checkbox-wrapper label::before, .radio-wrapper label::before {
-        content: "";
-        height: 20px;
-        width: 20px;
-        background: rgba(255, 255, 255, 0.75);  
-        border: 1px solid #024e76;  
-        position: absolute;
-        top: -4px;
-        left: -30px;
-      }
-      .radio-wrapper label::before {
-        border-radius: 50%;
-      }
-      .radio-wrapper label::after {
-        content: "";
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        background: #024e76;
-        position: absolute;
-        left: -29px;
-        top: -3px;
-        background-image: radial-gradient(circle, #39a6b2, #024e76);
-      }
-      
-      .checkbox-wrapper label::after {
-        content: "";
-        height: 6px;
-        width: 14px;
-        border-left: 2px solid #024e76;
-        border-bottom: 2px solid #024e76;
-        position: absolute;
-        left: -26px;
-        top: 1px;
-        transform: rotate(-58deg);
-      }
-      
-      .checkbox-wrapper input + label::after, 
-      .radio-wrapper input + label::after {
-        content: none;
-      }
-      
-      .checkbox-wrapper input:checked + label::after, 
-      .radio-wrapper input:checked + label::after {
-        content: "";
-      } 
+  header{
+padding-bottom: 0;
+justify-content: center;
+}
+    
+header h1 {
+width: 100%;
+text-align: center;
+position: relative;
+}
+    
+header nav ul {
+margin-top: 20px;
+width: 100%;
+justify-content: center;
+}
+    
+header nav ul li a {
+font-size: 20px;
+}
+    
+footer h2, footer div {
+text-align: center;
+width: 100%;
+}
 
-      /* default state */
+.hero-cta, .hero-form {
+width: 100%;
+}
+
+.hero-cta {
+text-align: center;
+}
+
+.section-title {
+width: 80%;
+}
+
+.trainer {
+flex: 0 70%;
+}
+
+.contact-info iframe{
+flex: 1 100%;
+}
+
+.some-class {
+text-shadow: 5px 10px 15px black;
+box-shadow: 5px 10px 15px rgba(0,0,0,25);
+}
+}
+@media screen and (max-width: 768px) {
+
+  section {
+padding: 30px 15px;
+}
+.step h3 {
+flex: 1 100%;
+text-align: center;
+}
+.step-info {
+flex: 2 100%;
+text-align: center;
+justify-content: center;
+}
+
+.step-img {
+flex: 0 32%;
+margin-right: 0;
+margin-top: 15px;
+margin-bottom: 15px;
+}
+
+.step-text {
+flex: 100%;  
+}
+}
+    
+@media screen and (max-width: 575px) {
+
+  .hero-form button {
+width: 100%;
+}
+
+.section-title {
+width: 95%;
+}
+
+.intro p {
+width: 100%;
+}
+
+.trainer {
+flex: 0 100%;
+}
+
+.contact-info {
+text-align: center;
+}
+
+.contact-info > * {
+flex: 0 100%;
+}
+
+.contact-form {
+order: 3;
+}
+.checkbox-wrapper input, .radio-wrapper input {
+opacity: 0;
+}
+
+.checkbox-wrapper label, .radio-wrapper label {
+position: relative;
+left: 10px;
+margin: 10px;
+line-height: 1.6;
+}
+
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+content: "";
+height: 20px;
+width: 20px;
+background: rgba(255, 255, 255, 0.75);  
+border: 1px solid #024e76;  
+position: absolute;
+top: -4px;
+left: -30px;
+}
+
+.radio-wrapper label::before {
+border-radius: 50%;
+}
+
+.radio-wrapper label::after {
+content: "";
+width: 20px;
+height: 20px;
+border-radius: 50%;
+background: #024e76;
+position: absolute;
+left: -29px;
+top: -3px;
+background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+
+.checkbox-wrapper label::after {
+content: "";
+height: 6px;
+width: 14px;
+border-left: 2px solid #024e76;
+border-bottom: 2px solid #024e76;
+position: absolute;
+left: -26px;
+top: 1px;
+transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+content: "";
+} 
+
+/* default state */
 button {
-    background: white;
-  }
-  
-  /* mouse is hovering over button */
-  button:hover {
-    background: red;
-  }
-  
-  /* button is in focus because it was the most recently clicked element on the page */
-  button:focus {
-    background: green;
-  }
-  
-  /* user is actively pressing the cursor down on the button */
-  button:active {
-    background: blue;
-  }
-  /* secondary page hero */
+background: white;
+}
+
+/* mouse is hovering over button */
+button:hover {
+background: red;
+}
+
+/* button is in focus because it was the most recently clicked element on the page */
+button:focus {
+background: green;
+}
+
+/* user is actively pressing the cursor down on the button */
+button:active {
+background: blue;
+}
+}
+/* secondary page hero */
+
 .hero-secondary {
-  background-color: black;
-  color: red;
-  margin: 20px;
-  font-size: 20px;
-  }
+background-color: black;
+color: red;
+margin: 20px;
+font-size: 20px;
+}
+
